# tokenburn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
src/actions/: generate_config.rs
src/calculator/: calculator.rs  log_tracker.rs  mod.rs  price_calculator.rs  smoothing.rs
src/cli/: command.rs
src/configuration/: calculations_config.rs  config.rs  config.toml  mod.rs
src/data/: claude_log.rs  mod.rs
src/listener/: key_listener.rs  mod.rs
src/tui/: animation.rs  mod.rs  tui.rs
src/tui/animation/: animation.rs  frame.rs  mod.rs  player.rs
src/tui/assets/: brainrot.txt  high_fire.txt  low_fire.txt  medium_fire.txt  no_fire.txt
src/utils/: file_system.rs
