[package]
name = "tokenburn"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Magic-JD/tokenburn"
homepage = "https://github.com/Magic-JD/tokenburn"
description = "Measures token spend when using claude code."
authors = ["Joseph Daunt"]

[dependencies]
dirs = "6.0.0"
walkdir = "2.5.0"
rev_lines = "0.3.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.29.0"
ratatui = "0.30.2"
toml = "1.1.2+spec-1.1.0"

[build-dependencies]
clap = { version = "4.5.40", features = ["derive", "cargo", "env"] }
clap_mangen = "0.2.27"
clap_complete = "4.5.54"
